k8s/apps/kaneo/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kaneo
  namespace: kaneo
  annotations:
    argocd.argoproj.io/sync-wave: "20"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: istio-gateway
      namespace: istio-ingress
  hostnames:
    - "kaneo.joelmccoy.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: kaneo
          port: 5173
          weight: 1
